Prepare complete Maven build